<resources>
    <string name="app_name">Note App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="app_logo">App Logo</string>
    <string name="note_description_placeholder_text">Note Description</string>
    <string name="note_title_placeholder_text">Note title</string>
    <string name="no_notes_description">Tap the \"Add\" icon below to add your first note.</string>
    <string name="no_notes">No notes</string>
    <string name="note_title">Note title</string>
    <string name="note_description">Note description</string>
    <string name="submit_note_placeholder">Submit note</string>
    <string name="manage_note_placeholder">Manage note</string>
    <string name="edit">Edit</string>
    <string name="edit_note">Edit note</string>
    <string name="add_note">Add note</string>
    <string name="add">Add</string>
    <string name="note_details">Note details</string>
    <string name="note_title_placeholder_ref">Note title</string>
    <string name="note_description_placeholder_ref">Note description</string>
    <string name="delete_note">Delete note</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log out</string>
    <string name="log_out_confirmation">Are you sure you want to log out? Your notes will still be stored with your account - if you log in again, your notes will be shown back.</string>
    <string name="note_deleted_snackbar">Note deleted successfully</string>
    <string name="note_delete_confirmation">Are you sure you want to delete this note? This cannot be undone!</string>
</resources>