<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.ui.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp"
        android:orientation="horizontal"
        android:theme="@style/TopAppBarBackgroundColor"
        >
        <!--        placeholder       -->
        <Space
            android:layout_width="0sp"
            android:layout_height="50sp"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:padding="4sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/note_details"
            android:id="@+id/manageNoteTopText"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingVertical="8sp"
            android:paddingHorizontal="16sp"
            android:orientation="vertical"
            android:layout_weight="1">
            <!-- loading -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center"
                android:orientation="vertical"
                android:id="@+id/loading">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </LinearLayout>

            <!-- main layout -->
            <LinearLayout
                android:id="@+id/noteDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:textColor="@color/black"
                        android:id="@+id/noteTitle"
                        android:hint="@string/note_title_placeholder_ref"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:id="@+id/noteDescription"
                        android:textColor="@color/black"
                        android:hint="@string/note_description_placeholder_ref"/>
                </LinearLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEditNote"
                        app:icon="@drawable/ic_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        app:iconGravity="textStart"
                        android:textAllCaps="false"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:cornerRadius="8dp"
                        android:layout_marginBottom="12sp"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDeleteNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        app:iconGravity="textStart"
                        android:textAllCaps="false"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:cornerRadius="8dp"
                        app:icon="@drawable/ic_delete"
                        android:layout_marginBottom="12sp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>